<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:text="@string/account_name"
        android:textColor="@color/off_white" />

    <android.support.design.widget.TextInputLayout
        style="@style/InputFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account_add_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/colorPrimary"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="8dp"
        android:text="@string/balance"
        android:textColor="@color/off_white" />


    <android.support.design.widget.TextInputLayout
        style="@style/InputFieldStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        app:hintEnabled="false">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/account_add_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:backgroundTint="@color/colorPrimary"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:nestedScrollingEnabled="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/new_account_button"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/add"
        android:textColor="#ffffff" />

</LinearLayout>