<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@android:drawable/ic_menu_today"
                android:tint="#eee"/>

            <TextView
                android:id="@+id/addDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="16dp"
                android:textColor="@color/off_white"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="23 Sep, 2019" />

            <TextView
                android:id="@+id/addTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/off_white"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="23:15" />
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="96dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/off_white"
            android:text="@string/sgd"
            android:textSize="24sp" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:cursorVisible="false"
                android:gravity="center_vertical|right"
                android:hint="0.00"
                android:textColorHint="@color/salmon"
                android:inputType="numberDecimal"
                android:paddingBottom="8dp"
                android:textColor="@color/salmon"
                android:paddingEnd="42dp"
                android:textSize="64sp"
                android:paddingTop="8dp" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>



    <LinearLayout
        style="@style/category_bar"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/off_white"
            android:text="@string/type"
            android:textAllCaps="true"
            android:textSize="13sp" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/off_white"
            android:textAllCaps="true"
            android:textSize="13sp" />



        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category_header"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/off_white"
                    android:text="@string/category"
                    android:textAllCaps="true"
                    android:textSize="13sp"
                    app:layout_constraintLeft_toLeftOf="parent" />

            </LinearLayout>


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        style="@style/category_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:background="@color/colorPrimary">


        <Spinner
            android:id="@+id/TTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/accountSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown"
            android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:paddingLeft="8dp">


        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:src="@android:drawable/ic_menu_edit"
            android:tint="@color/off_white"/>


        <android.support.design.widget.TextInputLayout
            style="@style/InputFieldStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            app:hintEnabled="false">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/addItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="@color/off_white"
                android:background="@android:color/transparent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:hint="Description..."
                android:minHeight="32dp" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>




</LinearLayout>